--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 body {
-    background-color: #1c1c1c;
+    background-color: #1f2937;
     color: whitesmoke;
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -33,7 +33,9 @@ hr {
     border: 1px solid #273549;
 }
 .container {
-    background-color: #1f2937;
+    border: 1px solid #334c69;
+    border-radius: 20px;
+    background-color: #213143;
     width: 100vw;
     height: 100%;
     display: flex;
@@ -80,6 +82,7 @@ hr {
     color: black;
 }
 
+
 .result-div {
     display: flex;
     margin: 0 5px 0 5px;
@@ -99,6 +102,8 @@ hr {
     height: 39px;
     flex-grow: 1;
 }
+
+
 
 .generated-pass-btn {
     border-radius: 5px;
